--- a/referrals/index.html
+++ b/referrals/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../home/style.css">
 </head>
 
 <body>
@@ -46,6 +47,29 @@
   </div>
 
 </div>
+
+  <!-- ===== PREMIUM BOTTOM NAV ===== -->
+  <nav class="bottom-nav">
+    <a href="index.html" class="nav-btn active">
+      <i class="fa-solid fa-house"></i>
+      <span>Home</span>
+    </a>
+
+    <a href="../products/index.html" class="nav-btn">
+      <i class="fa-solid fa-lightbulb"></i>
+      <span>Products</span>
+    </a>
+
+    <a href="../referrals/index.html" class="nav-btn">
+      <i class="fa-solid fa-gift"></i>
+      <span>Referrals</span>
+    </a>
+
+    <a href="../profile/index.html" class="nav-btn">
+      <i class="fa-solid fa-user"></i>
+      <span>Profile</span>
+    </a>
+  </nav>
 
 <script src="script.js"></script>
 </body>
