--- a/referrals/index.html
+++ b/referrals/index.html
@@ -8,7 +8,7 @@
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../referrals/style.css">
 </head>
 
 <body>
@@ -75,6 +75,6 @@
 
 </nav>
 
-<script src="script.js"></script>
+<script src="../referrals/script.js"></script>
 </body>
 </html>
