--- a/referrals/index.html
+++ b/referrals/index.html
@@ -50,30 +50,30 @@
 
 </div>
 
-<!-- ===== PREMIUM BOTTOM NAV (PROFILE STYLE) ===== -->
-<nav class="bottom-nav">
+  <!-- PREMIUM BOTTOM NAV -->
+  <nav class="bottom-nav">
 
-  <a href="../home/index.html" class="nav-item">
-    <i class="fa-solid fa-house"></i>
-    <span>Home</span>
-  </a>
+    <a href="../home/index.html" class="nav-btn">
+      <i class="fa-solid fa-house"></i>
+      <span>Home</span>
+    </a>
 
-  <a href="../products/index.html" class="nav-item">
-    <i class="fa-solid fa-lightbulb"></i>
-    <span>Products</span>
-  </a>
+    <a href="../products/index.html" class="nav-btn">
+      <i class="fa-solid fa-lightbulb"></i>
+      <span>Products</span>
+    </a>
 
-  <a href="../referrals/index.html" class="nav-item active">
-    <i class="fa-solid fa-gift"></i>
-    <span>Referrals</span>
-  </a>
+    <a href="../referrals/index.html" class="nav-btn">
+      <i class="fa-solid fa-gift"></i>
+      <span>Referrals</span>
+    </a>
 
-  <a href="../profile/index.html" class="nav-item">
-    <i class="fa-solid fa-user"></i>
-    <span>Profile</span>
-  </a>
+    <a href="../profile/index.html" class="nav-btn active">
+      <i class="fa-solid fa-user"></i>
+      <span>Profile</span>
+    </a>
 
-</nav>
+  </nav>
 
 <script src="../referrals/script.js"></script>
 </body>
