--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="../home/style.css" />
+  <link rel="stylesheet" href="../profile/style.css" />
   <link rel="stylesheet" href="../products/style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -113,7 +113,7 @@
     </div>
   </div>
 
-  <!-- ===== PREMIUM BOTTOM NAV ===== -->
+    <!-- PREMIUM BOTTOM NAV -->
   <nav class="bottom-nav">
 
     <a href="../home/index.html" class="nav-btn">
@@ -121,7 +121,7 @@
       <span>Home</span>
     </a>
 
-    <a href="../products/index.html" class="nav-btn active">
+    <a href="../products/index.html" class="nav-btn">
       <i class="fa-solid fa-lightbulb"></i>
       <span>Products</span>
     </a>
@@ -131,7 +131,7 @@
       <span>Referrals</span>
     </a>
 
-    <a href="../profile/index.html" class="nav-btn">
+    <a href="../profile/index.html" class="nav-btn active">
       <i class="fa-solid fa-user"></i>
       <span>Profile</span>
     </a>
