--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- MAIN CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../home/style.css">
+
+ <!-- PROFILE CSS -->
+  <link rel="stylesheet" href="../profile/style.css">
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -151,9 +154,10 @@
     </div>
   </section>
 
-  <!-- ===== PREMIUM BOTTOM NAV ===== -->
+   <!-- PREMIUM BOTTOM NAV -->
   <nav class="bottom-nav">
-    <a href="index.html" class="nav-btn active">
+
+    <a href="../home/index.html" class="nav-btn">
       <i class="fa-solid fa-house"></i>
       <span>Home</span>
     </a>
@@ -168,10 +172,11 @@
       <span>Referrals</span>
     </a>
 
-    <a href="../profile/index.html" class="nav-btn">
+    <a href="../profile/index.html" class="nav-btn active">
       <i class="fa-solid fa-user"></i>
       <span>Profile</span>
     </a>
+
   </nav>
 
 </body>
