--- a/home/index.html
+++ b/home/index.html
@@ -154,7 +154,8 @@
     </div>
   </section>
 
-   <nav class="bottom-nav">
+   <!-- PREMIUM BOTTOM NAV -->
+<nav class="bottom-nav">
 
   <a href="../home/index.html" class="nav-btn active">
     <i class="fa-solid fa-house"></i>
@@ -175,6 +176,7 @@
     <i class="fa-solid fa-user"></i>
     <span>Profile</span>
   </a>
+
 </nav>
   
 </body>
