--- a/products/index.html
+++ b/products/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="../profile/style.css" />
+  <link rel="stylesheet" href="../shared/style.css" />
   <link rel="stylesheet" href="../products/style.css" />
+  <link rel="stylesheet" href="../home/style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Products | Philips</title>
