--- a/profile/index.html
+++ b/profile/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="../home/style.css" />
   <link rel="stylesheet" href="../profile/style.css" />
+  <link rel="stylesheet" href="../shared/style.css" />
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -119,30 +120,30 @@
   </section>
 
   <!-- PREMIUM BOTTOM NAV -->
-  <nav class="bottom-nav">
+<nav class="bottom-nav">
 
-    <a href="../home/index.html" class="nav-btn">
-      <i class="fa-solid fa-house"></i>
-      <span>Home</span>
-    </a>
+  <a href="../home/index.html" class="nav-btn">
+    <i class="fa-solid fa-house"></i>
+    <span>Home</span>
+  </a>
 
-    <a href="../products/index.html" class="nav-btn">
-      <i class="fa-solid fa-lightbulb"></i>
-      <span>Products</span>
-    </a>
+  <a href="../products/index.html" class="nav-btn">
+    <i class="fa-solid fa-lightbulb"></i>
+    <span>Products</span>
+  </a>
 
-    <a href="../referrals/index.html" class="nav-btn">
-      <i class="fa-solid fa-gift"></i>
-      <span>Referrals</span>
-    </a>
+  <a href="../referrals/index.html" class="nav-btn">
+    <i class="fa-solid fa-gift"></i>
+    <span>Referrals</span>
+  </a>
 
-    <a href="../profile/index.html" class="nav-btn active">
-      <i class="fa-solid fa-user"></i>
-      <span>Profile</span>
-    </a>
+  <a href="../profile/index.html" class="nav-btn active">
+    <i class="fa-solid fa-user"></i>
+    <span>Profile</span>
+  </a>
 
-  </nav>
-
+</nav>
+  
   <script src="../profile/script.js"></script>
 </body>
 </html>
