--- a/referrals/index.html
+++ b/referrals/index.html
@@ -8,7 +8,9 @@
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <link rel="stylesheet" href="../home/style.css">
   <link rel="stylesheet" href="../referrals/style.css">
+  <link rel="stylesheet" href="../shared/style.css">
 </head>
 
 <body>
