--- a/referrals/index.html
+++ b/referrals/index.html
@@ -53,29 +53,29 @@
 </div>
 
   <!-- PREMIUM BOTTOM NAV -->
-  <nav class="bottom-nav">
+<nav class="bottom-nav">
 
-    <a href="../home/index.html" class="nav-btn">
-      <i class="fa-solid fa-house"></i>
-      <span>Home</span>
-    </a>
+  <a href="../home/index.html" class="nav-btn">
+    <i class="fa-solid fa-house"></i>
+    <span>Home</span>
+  </a>
 
-    <a href="../products/index.html" class="nav-btn">
-      <i class="fa-solid fa-lightbulb"></i>
-      <span>Products</span>
-    </a>
+  <a href="../products/index.html" class="nav-btn">
+    <i class="fa-solid fa-lightbulb"></i>
+    <span>Products</span>
+  </a>
 
-    <a href="../referrals/index.html" class="nav-btn">
-      <i class="fa-solid fa-gift"></i>
-      <span>Referrals</span>
-    </a>
+  <a href="../referrals/index.html" class="nav-btn active">
+    <i class="fa-solid fa-gift"></i>
+    <span>Referrals</span>
+  </a>
 
-    <a href="../profile/index.html" class="nav-btn active">
-      <i class="fa-solid fa-user"></i>
-      <span>Profile</span>
-    </a>
+  <a href="../profile/index.html" class="nav-btn">
+    <i class="fa-solid fa-user"></i>
+    <span>Profile</span>
+  </a>
 
-  </nav>
+</nav>
 
 <script src="../referrals/script.js"></script>
 </body>
