--- a/home/index.html
+++ b/home/index.html
@@ -5,11 +5,9 @@
   <title>Philips India Lighting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- MAIN CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../home/style.css">
-
- <!-- PROFILE CSS -->
-  <link rel="stylesheet" href="../profile/style.css">
+  <link rel="stylesheet" href="../shared/style.css">
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
