--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="../home/style.css">
-  <link rel="stylesheet" href="../shared/style.css">
+  <link rel="stylesheet" href="../shared/bottom-nav.css">
 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
