--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="../shared/style.css" />
+  <link rel="stylesheet" href="../shared/bottom-nav.css">
   <link rel="stylesheet" href="../products/style.css" />
   <link rel="stylesheet" href="../home/style.css" />
   <meta charset="UTF-8" />
