--- a/referrals/index.html
+++ b/referrals/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="../home/style.css">
   <link rel="stylesheet" href="../referrals/style.css">
-  <link rel="stylesheet" href="../shared/style.css">
+  <link rel="stylesheet" href="../shared/bottom-nav.css">
 </head>
 
 <body>
