--- a/profile/index.html
+++ b/profile/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="../home/style.css" />
   <link rel="stylesheet" href="../profile/style.css" />
-  <link rel="stylesheet" href="../shared/style.css" />
+  <link rel="stylesheet" href="../shared/bottom-nav.css">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
