--- a/profile/index.html
+++ b/profile/index.html
@@ -15,11 +15,18 @@
 
 <body>
 
+  <!-- ===== NAVBAR ===== -->
   <nav class="navbar">
     <div class="logo-wrapper">
-      <a href="../home/index.html">
-        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo" />
+      <a href="index.html">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
       </a>
+
+      <div class="led-dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </nav>
 
