--- a/referrals/index.html
+++ b/referrals/index.html
@@ -15,6 +15,21 @@
 
 <body>
 
+  <!-- ===== NAVBAR ===== -->
+  <nav class="navbar">
+    <div class="logo-wrapper">
+      <a href="index.html">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
+      </a>
+
+      <div class="led-dots">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </nav>
+
 <div class="container">
 
   <div class="header">
