--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,7 @@
   <!-- ===== NAVBAR ===== -->
   <nav class="navbar">
     <div class="logo-wrapper">
-      <a href="index.html">
+      <a href="../home/index.html">
         <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
       </a>
 
