--- a/products/index.html
+++ b/products/index.html
@@ -29,80 +29,112 @@
     </div>
   </nav>
 
-  <!-- HEADER -->
+  <!-- ===== HEADER ===== -->
   <section class="pricing-header">
     <h1>Our Premium Lighting</h1>
     <p>Choose the perfect lighting solution for your space</p>
   </section>
 
-  <!-- PRODUCTS -->
+  <!-- ===== PRODUCTS ===== -->
   <section class="pricing-container">
 
+    <!-- PRODUCT CARD -->
     <div class="card">
       <div class="card-image">
-        <img src="../assets/bulb0.5watts.jpg" alt="Bulb" />
+        <img src="../assets/bulb0.5watts.jpg" alt="0.5W LED Bulb" />
       </div>
+
       <div class="card-content">
-        <h2>0.5W LED Bulb</h2>
-        <p class="price">₹99</p>
-        <p class="daily-earning">Daily Earning: ₹5</p>
-        <button class="subscribe-btn">
-          <i class="fa-solid fa-cart-shopping"></i> Buy Now
-        </button>
+
+        <!-- LEFT TEXT BLOCK -->
+        <div class="card-text">
+          <h2>0.5W LED Bulb</h2>
+          <p class="price">₹99</p>
+          <p class="daily-earning">Daily Earning: ₹5</p>
+        </div>
+
+        <!-- RIGHT BUTTON -->
+        <div class="card-action">
+          <button class="subscribe-btn">
+            <i class="fa-solid fa-cart-shopping"></i> Buy
+          </button>
+        </div>
+
       </div>
     </div>
 
+    <!-- PRODUCT 2 -->
     <div class="card">
       <div class="card-image">
-        <img src="../assets/bulb5watts.jpg" alt="Bulb" />
+        <img src="../assets/bulb5watts.jpg" alt="5W Smart Bulb" />
       </div>
+
       <div class="card-content">
-        <h2>5W Smart Bulb</h2>
-        <p class="price">₹499</p>
-        <p class="daily-earning">Daily Earning: ₹20</p>
-        <button class="subscribe-btn">
-          <i class="fa-solid fa-cart-shopping"></i> Buy Now
-        </button>
+        <div class="card-text">
+          <h2>5W Smart Bulb</h2>
+          <p class="price">₹499</p>
+          <p class="daily-earning">Daily Earning: ₹20</p>
+        </div>
+
+        <div class="card-action">
+          <button class="subscribe-btn">
+            <i class="fa-solid fa-cart-shopping"></i> Buy
+          </button>
+        </div>
       </div>
     </div>
 
+    <!-- PRODUCT 3 -->
     <div class="card">
       <div class="card-image">
-        <img src="../assets/bulb10watts.webp" alt="Bulb" />
+        <img src="../assets/bulb10watts.webp" alt="10W LED Bulb" />
       </div>
+
       <div class="card-content">
-        <h2>10W LED Bulb</h2>
-        <p class="price">₹999</p>
-        <p class="daily-earning">Daily Earning: ₹50</p>
-        <button class="subscribe-btn">
-          <i class="fa-solid fa-cart-shopping"></i> Buy Now
-        </button>
+        <div class="card-text">
+          <h2>10W LED Bulb</h2>
+          <p class="price">₹999</p>
+          <p class="daily-earning">Daily Earning: ₹50</p>
+        </div>
+
+        <div class="card-action">
+          <button class="subscribe-btn">
+            <i class="fa-solid fa-cart-shopping"></i> Buy
+          </button>
+        </div>
       </div>
     </div>
 
+    <!-- PRODUCT 4 -->
     <div class="card">
       <div class="card-image">
-        <img src="../assets/philips-health.jpg" alt="Light" />
+        <img src="../assets/philips-health.jpg" alt="Decorative Light" />
       </div>
+
       <div class="card-content">
-        <h2>Decorative Light</h2>
-        <p class="price">₹4999</p>
-        <p class="daily-earning">Daily Earning: ₹250</p>
-        <button class="subscribe-btn">
-          <i class="fa-solid fa-cart-shopping"></i> Buy Now
-        </button>
+        <div class="card-text">
+          <h2>Decorative Light</h2>
+          <p class="price">₹4999</p>
+          <p class="daily-earning">Daily Earning: ₹250</p>
+        </div>
+
+        <div class="card-action">
+          <button class="subscribe-btn">
+            <i class="fa-solid fa-cart-shopping"></i> Buy
+          </button>
+        </div>
       </div>
     </div>
 
   </section>
 
-  <!-- LOADING -->
+  <!-- ===== LOADING ===== -->
   <div class="loading-screen" id="loadingScreen">
     <div class="loader-circle"></div>
     <p>Processing Payment...</p>
   </div>
 
-  <!-- SUCCESS -->
+  <!-- ===== SUCCESS ===== -->
   <div class="success-overlay" id="successPopup">
     <div class="success-box">
       <div class="checkmark-wrapper">
@@ -114,31 +146,30 @@
     </div>
   </div>
 
-    <!-- PREMIUM BOTTOM NAV -->
-<nav class="bottom-nav">
+  <!-- ===== BOTTOM NAV ===== -->
+  <nav class="bottom-nav">
+    <a href="../home/index.html" class="nav-btn">
+      <i class="fa-solid fa-house"></i>
+      <span>Home</span>
+    </a>
 
-  <a href="../home/index.html" class="nav-btn">
-    <i class="fa-solid fa-house"></i>
-    <span>Home</span>
-  </a>
+    <a href="../products/index.html" class="nav-btn active">
+      <i class="fa-solid fa-lightbulb"></i>
+      <span>Products</span>
+    </a>
 
-  <a href="../products/index.html" class="nav-btn active">
-    <i class="fa-solid fa-lightbulb"></i>
-    <span>Products</span>
-  </a>
+    <a href="../referrals/index.html" class="nav-btn">
+      <i class="fa-solid fa-gift"></i>
+      <span>Referrals</span>
+    </a>
 
-  <a href="../referrals/index.html" class="nav-btn">
-    <i class="fa-solid fa-gift"></i>
-    <span>Referrals</span>
-  </a>
+    <a href="../profile/index.html" class="nav-btn">
+      <i class="fa-solid fa-user"></i>
+      <span>Profile</span>
+    </a>
+  </nav>
 
-  <a href="../profile/index.html" class="nav-btn">
-    <i class="fa-solid fa-user"></i>
-    <span>Profile</span>
-  </a>
-
-</nav>
-  
   <script src="../products/script.js"></script>
+
 </body>
 </html>
