--- a/products/index.html
+++ b/products/index.html
@@ -146,6 +146,18 @@
     </div>
   </div>
 
+  <!-- INSUFFICIENT BALANCE POPUP -->
+<div class="error-overlay" id="errorPopup">
+  <div class="error-box">
+    <h2>Insufficient Balance</h2>
+    <p>Please recharge your wallet to purchase this product.</p>
+    <div class="error-buttons">
+      <button onclick="closeErrorPopup()">Close</button>
+      <button onclick="goToRecharge()">Recharge</button>
+    </div>
+  </div>
+</div>
+
   <!-- ===== BOTTOM NAV ===== -->
   <nav class="bottom-nav">
     <a href="../home/index.html" class="nav-btn">
