--- a/wallet/transactions.html
+++ b/wallet/transactions.html
@@ -22,18 +22,9 @@
     </select>
   </div>
 
+  <!-- Single Transaction List -->
   <div class="transactions-wrapper">
-
-    <div class="transactions-column">
-      <h3 class="column-title recharge-title">Recharge</h3>
-      <div id="rechargeList"></div>
-    </div>
-
-    <div class="transactions-column">
-      <h3 class="column-title withdraw-title">Withdraw</h3>
-      <div id="withdrawList"></div>
-    </div>
-
+    <div id="transactionList"></div>
   </div>
 
   <script src="transactions.js"></script>
